# BluePagmanBot

./: .gitignore  Chess Openings.txt  Dockerfile  Joke Punchline.txt  Joke Setup.txt  README.md  bot - chess implementation.py  bot.py  chess960 FENS.txt  chessCommands.py  chess_game.py  config - Copy.py  config.py  config_example.py  dankPoker.py  newsCommands.py  pyproject.toml  readChessOpeningsTSV.py  redirectLinks.py  requirements.txt  snake game.py  testDescribe.py  testGeminiImage.py  testGrounding.py  testlyrics.py
BrailleArt/: braillecreate.py  brailletransform.py
Classes/: chess_game.py  dankPoker.py  reminder_class.py
Commands/: __init__.py  ascii.py  balance.py  bot_info.py  chessCommands.py  daily.py  date.py  deadchat.py  describe.py  eight_ball.py  football.py  gemini.py  gemini2.py  gemini3.py  generate_image.py  genius.py  grok_command.py  groq_command.py  guessgame.py  help.py  help_ascii.py  help_chess.py  help_news.py  help_ro.py  leaderboard.py  llama.py  llama3.py  nba.py  news.py  olympics.py  ping.py  play_chess.py  poker.py  pyramid.py  r960.py  reloadchannel.py  reloademotes.py  reloadglobals.py  remind.py  rm.py  (+17 more)
Data/: Chess Openings.txt  chess960 FENS.txt
Tests/: testDescribe.py  testGeminiImage.py  testGetYoutubeTranscript.py  testGrounding.py  testLyrics.py  testRandomRedditComment.py  testTruthSocialAPI.py  testYoutubeSummarizeTranscript.py  test_utils.py
Utils/: chessCommands.py  redirectLinks.py  utils.py
docs/: index.html
